--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 find_package(glad REQUIRED)
 find_package(glfw3 REQUIRED)
+include_directories(include)
 
-add_executable(${PROJECT_NAME} main.cc)
+add_executable(${PROJECT_NAME} src/window.cc app.cc)
 
 
 target_link_libraries(${PROJECT_NAME}
